src/css/base.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html,
  body {
    scroll-behavior: smooth;
    scroll-padding-top: var(--scroll-margin, 80px);
    font-family: "Raleway", sans-serif;
    max-width: 100vw;
    transition: all 2s;
  }

  * {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
    box-sizing: border-box;
  }
  

}

@layer components {
  .flex-centered-wrapper {
    @apply min-h-screen   
    /* max-w-[1140px]  */
    flex justify-center items-center;
    width: calc(100% - 0rem);
    min-height: 100vh;
    height: 100vh;
    margin-inline: auto;
  }

  h1 {
    font-weight: 900;
    font-size: 2rem;
  }
}

